# akademiks-urtt

./: .gitignore  POST_TG.md  README.md  pyproject.toml
akademiks/: __init__.py  api.py  cli.py  formatters.py  utils.py
examples/: all_groups.py  basic_usage.py  weekly_sync.py
