[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "akademiks-urtt"
version = "1.0.0"
description = "Python client & CLI for the Akademiks URTK schedule API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["urtk", "akademiks", "schedule", "timetable", "urtt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
akademiks = "akademiks.cli:main"

[project.urls]
Homepage = "https://github.com/cotafei/akademiks-urtt"
Issues = "https://github.com/cotafei/akademiks-urtt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["akademiks*"]
